--- a/test.Rnw
+++ b/test.Rnw
@@ -1,25 +1,29 @@
-\documentclass[a4paper,14pt]{article}
+\documentclass[a4paper]{article}
 \usepackage[paperwidth=21cm,paperheight=29.7cm,top=3cm,right=1.5cm,bottom=3cm,left=1.5cm]{geometry}
 \usepackage{makeidx}
+\usepackage{fontspec}
 %\usepackage{CJKutf8}
-%\usepackage{xeCJK}
-%\usepackage{multirow}
-%\usepackage{multicol}
+\usepackage{xeCJK}%設定中文為系統上的字型，而英文不去更動，使用原TeX字型
+\XeTeXlinebreaklocale "zh" %這兩行一定要加，中文才能自動換行
+\XeTeXlinebreakskip = 0pt plus 1pt %這兩行一定要加，中文才能自動換行
+\setCJKmainfont{標楷體}
+\usepackage{multirow}
+\usepackage{multicol}
 %\usepackage[dvipsnames,svgnames,table]{xcolor}
 \usepackage{graphicx}
-\usepackage{epstopdf}
 \usepackage{ulem}
 \usepackage{amsmath}
 \usepackage{amssymb}
-\usepackage{fontspec}
 \usepackage[toc,page]{appendix}
 \usepackage{pdflscape}
 \usepackage{supertabular}
 \usepackage{dcolumn}
-%\setCJKmainfont{標楷體}
+\setmainfont{Times New Roman}
 \author{Oscar Deng}
 \title{企業競爭策略與產業競爭程度對避稅行為之影響}
 \date{\today}
+
+
 \begin{document}
 %\begin{CJK}{UTF8}{kaiu}
 \tableofcontents
@@ -41,7 +45,7 @@ TEJ8.1 <- read.csv("TEJ8.1.csv",row.names = 1)
 
 \newpage
 \section{\\Appendix D.1: Descriptive Statistics Table} \label{App:Appendix D.1}
-<<label="descriptive stat tab", results='asis'>>=
+<<results='asis'>>=
 stargazer(
     TEJ8.1 %>% select(ETR,CETR,STR,HHI_Dum,STR_HHI,ROA,SIZE,LEV,
                       INTANG,QUICK,EQINC,OUTINSTI,RELAT,FAM_Dum,GDP,
@@ -52,9 +56,8 @@ stargazer(
  ,summary.stat = c("n","min","p25","median","p75","max","sd","mean")
  ,table.placement = "h!"
  ,title = "Descriptive Statistics Table"
- ,notes.append = TRUE)
+ ,notes.append = TRUE,label = "D1")
 @
-\newpage
 
 \section{\\Appendix D.1.1: figures of each variables} \label{App:Appendix D.1.1}
 ETR與CETR分布圖(winsor前後)\\
@@ -62,8 +65,10 @@ ETR與CETR分布圖(winsor前後)\\
 qplot(ETR,CETR,data=TEJ8.1);qplot(ETR,CETR,data=TEJ8.1)
 @
 
+
+
 \newpage
-\section{\\Appendix D.2: Table of Market Structure(HHI)} \label{App:Appendix D.2}
+\section{\\Appendix D.3: Table of Market Structure(HHI)} \label{App:Appendix D.3}
 <<results='markup'>>=
 plottbA5 <- function(x=TEJ8.1){
   x$TSE <- paste(x$TSE_code,x$TSE_name,sep="")
@@ -80,6 +85,173 @@ plottbA5 <- function(x=TEJ8.1){
   return(HHI_tbl)
   };HHI_tbl <- plottbA5()
 @
+
+\newpage
+\newgeometry{margin=1cm}
+\begin{landscape}
+\thispagestyle{empty}
+
+<<results='asis'>>=
+print(xtable(HHI_tbl),scalebox=0.70)
+@
+註:\\
+a.分類方式參考美國司法部之市場結構分類標準，依HHI 值判斷其競爭程度，HHI 值愈小代表該產業集中度愈低，產業競爭程度愈激烈。\\
+b.分類區間：高寡佔I 型≧0.3＞高寡佔II 型≧0.18＞低寡占I 型≧0.14＞低寡占II 型≧0.1＞競爭I 型≧0.05＞競爭II 型。\\
+\end{landscape}
+\restoregeometry
+
+\newpage
+\section{\\Appendix D.4: Pearson Correlation Coefficiency} \label{App:Appendix D.4}
+ <<results='markup'>>=
+ETR.cortab <- corstars(TEJ8.1 %>% select(ETR,STR,HHI_Dum,ROA,SIZE,LEV,
+                      INTANG,QUICK,EQINC,OUTINSTI,RELAT,FAM_Dum,GDP)
+   ,method = "pearson",removeTriangle = "lower",star = 3,result = "none")
+CETR.cortab <- corstars(TEJ8.1 %>% select(CETR,STR,HHI_Dum,ROA,SIZE,LEV,
+                      INTANG,QUICK,EQINC,OUTINSTI,RELAT,FAM_Dum,GDP)
+   ,method = "pearson",removeTriangle = "lower",star = 3,result = "none")
+@
+
+\newpage
+\begin{landscape}
+\thispagestyle{empty}
+\centerline{表、相關係數表(應變數為ETR)}
+<<results='asis'>>=
+print(xtable(ETR.cortab))
+@
+註：a. 變數定義同前表。\\
+    b. ***、**、*表示1\%、5\% 及10\% 顯著水準。\\
+\end{landscape}
+
+\newpage
+\begin{landscape}
+\thispagestyle{empty}
+\centerline{表、相關係數表(應變數為CETR)}
+<<results='asis'>>=
+print(xtable(CETR.cortab))
+@
+註：a. 變數定義同前表。\\
+    b. ***、**、*表示1\%、5\% 及10\% 顯著水準。\\
+\end{landscape}
+
+
+\newpage
+\section{\\Appendix E: construct linear model} \label{App:Appendix E}
+<<results='markup'>>=
+lm.ETR <- lm(ETR ~ STR+HHI_Dum+ROA+SIZE+LEV+INTANG+QUICK+EQINC+OUTINSTI+RELAT+FAM_Dum+GDP
+            ,TEJ8.1)
+lm.CETR <- lm(CETR ~ STR+HHI_Dum+ROA+SIZE+LEV+INTANG+QUICK+EQINC+OUTINSTI+RELAT+FAM_Dum+GDP
+             ,TEJ8.1)
+lm.ETR.SH <- lm(ETR ~ STR+HHI_Dum+STR_HHI+ROA+SIZE+LEV+INTANG+QUICK+EQINC+OUTINSTI+RELAT+FAM_Dum+GDP,TEJ8.1)
+lm.CETR.SH <- lm(CETR ~ STR+HHI_Dum+STR_HHI+ROA+SIZE+LEV+INTANG+QUICK+EQINC+OUTINSTI+RELAT+FAM_Dum+GDP,TEJ8.1)
+@
+
+\newpage
+\section{\\Appendix E.1: Empirical 1} \label{App:Appendix E.1}
+模型1:\\
+\begin{equation}
+TAXAVO_{it}=\beta_{0}+\beta_{1}STR_{it}+\beta_{2}HHI_{jt}+\beta_{3}ROA_{it}+\beta_{4}SIZE_{it}+\beta_{5}LEV_{it}+\beta_{6}INTANG_{it}+\beta_{7}QUICK_{it}+\beta_{8}EQINC_{it}+\beta_{9}OUTINSTI_{it}+\beta_{10}RELAT_{it}+\beta_{11}FAMILY_{it}+\beta_{12}GDP_{it}+\varepsilon_{13}
+\end{equation}
+實證結果─不包含STRATEGY×HHI\\
+<<results='asis'>>=
+  stargazer(lm.ETR,lm.CETR,
+    dep.var.labels = c("$TAXAVO_{it}=ETR_{it}$","$TAXAVO_{it}=CashETR_{it}$"),
+    digits=3,label = "E1")
+@
+
+\newpage
+\section{\\Appendix E.2: Empirical 2} \label{App:Appendix E.2}
+模型2:\\
+\begin{equation}
+TAXAVO_{it}=\beta_{0}+\beta_{1}STR_{it}+\beta_{2}HHI_{jt}+\beta_{3}STR_{it}*HHI_{it}+\beta_{4}ROA_{it}+\beta_{5}SIZE_{it}+\beta_{6}LEV_{it}+\beta_{7}INTANG_{it}+\beta_{8}QUICK_{it}+\beta_{9}EQINC_{it}+\beta_{10}OUTINSTI_{it}+\beta_{11}RELAT_{it}+\beta_{12}FAMILY_{it}+\beta_{13}GDP_{it}+\varepsilon_{14}
+\end{equation}
+實證結果─包含STRATEGY×HHI\\
+<<results='asis'>>=
+  stargazer(lm.ETR.SH,lm.CETR.SH,
+    dep.var.labels = c("$TAXAVO_{it}=ETR_{it}$","$TAXAVO_{it}=CashETR_{it}$"),
+    digits=3,label = "E2")
+@
+
+
+
+\newpage
+\section{\\Appendix F: 敏感性分析} \label{App:Appendix F}
+敏感性分析\\
+分析一、百分位\\
+重建模型\\
+<<results='asis'>>=
+  TEJ8.2 <- TEJ8.1 %>% mutate(STR.PR = STR_RD.perank+STR_MB.perank+STR_EMP.perank+STR_PPE.perank+STR_MARKET.perank) %>% mutate(STR.PR_HHI = STR.PR*HHI_Dum)
+  lm.ETR2 <- lm(ETR ~ STR.PR+HHI_Dum+ROA+SIZE+LEV+INTANG+QUICK+EQINC+OUTINSTI+RELAT+FAM_Dum+GDP,TEJ8.2)
+  lm.CETR2 <- lm(CETR ~ STR.PR+HHI_Dum+ROA+SIZE+LEV+INTANG+QUICK+EQINC+OUTINSTI+RELAT+FAM_Dum+GDP,TEJ8.2)
+  lm.ETR.SH2 <- lm(ETR ~ STR.PR+HHI_Dum+STR.PR_HHI+ROA+SIZE+LEV+INTANG+QUICK+EQINC+OUTINSTI+RELAT+FAM_Dum+GDP,TEJ8.2)
+  lm.CETR.SH2 <- lm(CETR ~ STR.PR+HHI_Dum+STR.PR_HHI+ROA+SIZE+LEV+INTANG+QUICK+EQINC+OUTINSTI+RELAT+FAM_Dum+GDP,TEJ8.2)
+@
+
+\newpage
+\section{\\Appendix F.1: Empirical - 1} \label{App:Appendix F.1}
+新模型1:\\
+$TAXAVO_{it}=\beta_{0}+\beta_{1}STR.PR_{it}+\beta_{2}HHI_{jt}+\beta_{3}ROA_{it}+\beta_{4}SIZE_{it}+\beta_{5}LEV_{it}+\beta_{6}INTANG_{it}+\beta_{7}QUICK_{it}+\beta_{8}EQINC_{it}+\beta_{9}OUTINSTI_{it}+\beta_{10}RELAT_{it}+\beta_{11}FAMILY_{it}+\beta_{12}GDP_{it}+\varepsilon_{13}$\\
+實證結果─不包含STRATEGY×HHI\\
+<<results='asis'>>=
+  stargazer(lm.ETR2,lm.CETR2,
+    dep.var.labels = c("$TAXAVO_{it}=ETR_{it}$","$TAXAVO_{it}=CashETR_{it}$"),
+    digits=3,label = "F1")
+@
+
+\newpage
+\section{\\Appendix F.2: Empirical - 2} \label{App:Appendix F.2}
+新模型2:\\
+$TAXAVO_{it}=\beta_{0}+\beta_{1}STR.PR_{it}+\beta_{2}HHI_{jt}+\beta_{3}STR.PR_{it}*HHI_{it}+\beta_{4}ROA_{it}+\beta_{5}SIZE_{it}+\beta_{6}LEV_{it}+\beta_{7}INTANG_{it}+\beta_{8}QUICK_{it}+\beta_{9}EQINC_{it}+\beta_{10}OUTINSTI_{it}+\beta_{11}RELAT_{it}+\beta_{12}FAMILY_{it}+\beta_{13}GDP_{it}+\varepsilon_{14}$\\
+實證結果─包含STRATEGY×HHI\\
+<<results='asis'>>=
+  stargazer(lm.ETR.SH2,lm.CETR.SH2,
+    dep.var.labels = c("$TAXAVO_{it}=ETR_{it}$","$TAXAVO_{it}=CashETR_{it}$"),
+    digits=3,label = "F2")
+@
+
+\newpage
+\section{\\Appendix F.3: CR4生成} \label{App:Appendix F.3}
+分析二、前四大廠市佔比\\
+重建模型\\
+<<results='markup'>>=
+TEJ8.3 <- merge(
+    merge(
+      x=TEJ8.1 %>% group_by(TSE_code,year) %>% summarise(NetSales.Deno = sum(as.numeric(NetSales),na.rm=TRUE)),
+      y=TEJ8.1 %>% group_by(TSE_code,year) %>% top_n(n=4,wt = NetSales) %>% summarise(NetSales.nume = sum(as.numeric(NetSales),na.rm=TRUE)),
+      by=c("TSE_code","year")) %>%
+    mutate(CR4 = as.numeric(NetSales.nume / NetSales.Deno))
+    ,y=TEJ8.1
+    ,by=c("TSE_code","year")
+    ) %>% mutate(STR_CR4 = STR * CR4)
+
+  lm.ETR3 <- lm(ETR ~ STR+CR4+ROA+SIZE+LEV+INTANG+QUICK+EQINC+OUTINSTI+RELAT+FAM_Dum+GDP,TEJ8.3)
+  lm.CETR3 <- lm(CETR ~ STR+CR4+ROA+SIZE+LEV+INTANG+QUICK+EQINC+OUTINSTI+RELAT+FAM_Dum+GDP,TEJ8.3)
+  lm.ETR.SH3 <- lm(ETR ~ STR+CR4+STR_CR4+ROA+SIZE+LEV+INTANG+QUICK+EQINC+OUTINSTI+RELAT+FAM_Dum+GDP,TEJ8.3)
+  lm.CETR.SH3 <- lm(CETR ~ STR+CR4+STR_CR4+ROA+SIZE+LEV+INTANG+QUICK+EQINC+OUTINSTI+RELAT+FAM_Dum+GDP,TEJ8.3)
+  
+@
+
+\newpage
+\section{\\Appendix F.4: Empirical - 1} \label{App:Appendix F.4}
+新模型3:\\
+$TAXAVO_{it}=\beta_{0}+\beta_{1}STR_{it}+\beta_{2}CR4_{jt}+\beta_{3}ROA_{it}+\beta_{4}SIZE_{it}+\beta_{5}LEV_{it}+\beta_{6}INTANG_{it}+\beta_{7}QUICK_{it}+\beta_{8}EQINC_{it}+\beta_{9}OUTINSTI_{it}+\beta_{10}RELAT_{it}+\beta_{11}FAMILY_{it}+\beta_{12}GDP_{it}+\varepsilon_{13}$\\
+實證結果─不包含STR×CR4\\
+<<results='asis'>>=
+  stargazer(lm.ETR3,lm.CETR3,
+    dep.var.labels = c("$TAXAVO_{it}=ETR_{it}$","$TAXAVO_{it}=CashETR_{it}$"),
+    digits=3,label = "F4")
+@
+
+\newpage
+\section{\\Appendix F.5: Empirical - 2} \label{App:Appendix F.5}
+新模型4:\\
+$TAXAVO_{it}=\beta_{0}+\beta_{1}STR_{it}+\beta_{2}CR4_{jt}+\beta_{3}STR_{it}*CR4_{it}+\beta_{4}ROA_{it}+\beta_{5}SIZE_{it}+\beta_{6}LEV_{it}+\beta_{7}INTANG_{it}+\beta_{8}QUICK_{it}+\beta_{9}EQINC_{it}+\beta_{10}OUTINSTI_{it}+\beta_{11}RELAT_{it}+\beta_{12}FAMILY_{it}+\beta_{13}GDP_{it}+\varepsilon_{14}$\\
+實證結果─包含STRATEGY×HHI\\
+<<results='asis'>>=
+  stargazer(lm.ETR.SH3,lm.CETR.SH3,
+    dep.var.labels = c("$TAXAVO_{it}=ETR_{it}$","$TAXAVO_{it}=CashETR_{it}$"),
+    digits=3,label = "F5")
+@
+
 
 
 \end{document}
