--- a/pearson.Rnw
+++ b/pearson.Rnw
@@ -6,7 +6,7 @@
 \usepackage{xeCJK}%設定中文為系統上的字型，而英文不去更動，使用原TeX字型
 \XeTeXlinebreaklocale "zh" %這兩行一定要加，中文才能自動換行
 \XeTeXlinebreakskip = 0pt plus 1pt %這兩行一定要加，中文才能自動換行
-\setCJKmainfont{標楷體}
+%\setCJKmainfont{標楷體}
 \usepackage{multirow}
 \usepackage{multicol}
 %\usepackage[dvipsnames,svgnames,table]{xcolor}
@@ -39,6 +39,8 @@ require(ggplot2)
 require(stats)
 source("corstars.R")
 TEJ8.1 <- read.csv("TEJ8.1.csv",row.names = 1)
+yr <- seq(2006,2015)
+TEJ8.1 <- TEJ8.1 %>% filter(year %in% yr)
 
 ETR.cortab <- corstars(TEJ8.1 %>% select(ETR,STR,HHI_Dum,ROA,SIZE,LEV,
                       INTANG,QUICK,EQINC,OUTINSTI,RELAT,FAM_Dum,GDP)
